--- a/src/styles/LoginScreen.css
+++ b/src/styles/LoginScreen.css
@@ -5,7 +5,8 @@
     height: 100vh;
     background: url('../img/curclesLeft.png'), url('../img/curclesRight.png');
     background-repeat: no-repeat;
-    background-position: bottom right, top right;
+    background-position: bottom,  top right ;
+    background-size: 15%;
     display: flex;
 }
 
@@ -13,7 +14,8 @@
     position: relative;
     width: 50%;
     background: url('../img/notebook.svg') no-repeat center;
-    background-color: #7e77fb;
+    background-size: 80%;
+    background-color: #373535;
     padding: 10px;
 }
 
@@ -29,7 +31,7 @@
 .appName {
     font-size: 55px;
     font-family: 'Ubuntu', sans-serif;
-    color: #8682df;
+    color: #373535;
     font-weight: 400;
     margin: 5%;
 }
@@ -41,7 +43,7 @@
     top: 30px;
     right: -200px;
     width: 150px;
-    background: rgb(146, 142, 230, 0.8);
+    background:#373535;
     border-radius: 30px;
     padding: 14px 20px;
     opacity: 0;
