--- a/src/components/LoginScreen/LoginScreen.css
+++ b/src/components/LoginScreen/LoginScreen.css
@@ -3,7 +3,7 @@
 #welcome-screen {
     width: 100%;
     height: 100vh;
-    background: url('../img/curclesLeft.png'), url('../img/curclesRight.png');
+    background: url('../../img/curclesLeft.png'), url('../../img/curclesRight.png');
     background-repeat: no-repeat;
     background-position: bottom,  top right ;
     background-size: 15%;
@@ -13,7 +13,7 @@
 #main-pic {
     position: relative;
     width: 50%;
-    background: url('../img/notebook.svg') no-repeat center;
+    background: url('../../img/notebook.svg') no-repeat center;
     background-size: 80%;
     background-color: #373535;
     padding: 10px;
