--- a/src/components/SingleNote/SingleNote.css
+++ b/src/components/SingleNote/SingleNote.css
@@ -1,20 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 .note-ovelay{
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     background: #2b2828;
     height: 100vh; 
-}
-
-.details{
-    position: relative;
-    width: 25%;
-    min-height: 300px;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 23px;
-    border-radius: 15px;
-    padding: 20px;
-    
 }
