--- a/src/components/UserNote/UserNote.css
+++ b/src/components/UserNote/UserNote.css
@@ -2,14 +2,16 @@
 
 .articleNote {
     position: relative;
-    height: 30%;
-    padding: 20px 30px;
-    margin: 20px;
+    height: 250px;
+    padding: 20px;
+    margin: 15px;
     border-radius: 15px;
     font-family: 'Ubuntu', sans-serif;
     text-align: left;
+    width: 28%;
     min-height: 200px;
     max-height: 400px;
+    min-width: 200px;
 
     @media (max-width: 1010px) {
         grid-column: span 2;
@@ -36,6 +38,10 @@
     float: right;
     top: 7px;
     transform: scale(1.8);
+}
+
+.myFavorite{
+    color: red;
 }
 
 .note-details{
@@ -72,10 +78,12 @@
 }
 
 .noteText {
+    position: relative;
     width: 90%;
     font-size: 18px;
-    max-height: 50%;
+    max-height: 40%;
     overflow-y: auto;
+    padding-bottom: 40px;
 }
 
 .tags-container {
