--- a/src/components/SubmitBtn/SubmitBtn.css
+++ b/src/components/SubmitBtn/SubmitBtn.css
@@ -1,3 +1,12 @@
+.btn-container{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 110px;
+    height: 110px;
+}
+
 .submit{
     width: 20%;
     min-width: 200px;
@@ -10,9 +19,26 @@
     background-color: #494646;
     color: #ffffff;
     transition: transform 500ms ease;
+    position: relative; 
 }
 
 .submit:hover{
     transform: scale(1.1);
-
 }
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+.loading-spinner {
+    border: 4px solid rgba(0, 0, 0, 0.3);
+    border-top: 4px solid #ffffff;
+    border-radius: 35px;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    animation: spin 1s linear infinite;
+}
+  
